# check_commit_msg

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
src/check_commit_msg/: hook.py
