[project]
name = "check-commit-msg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
commit-msg-hook = "check_commit_msg.hook:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/check_commit_msg"]
